--- a/index.ipynb
+++ b/index.ipynb
@@ -437,7 +437,7 @@
     "# we want a list of all the names of the players in this match\n",
     "# but we want both first and last names to be formatted in title case\n",
     "player_names = None\n",
-    "# code goes here"
+    "# code goes here\n"
    ]
   },
   {
